2007-06-10  Jens Granseuer  <jensgr@gmx.net>

	* appearance-style.c: (check_color_schemes_enabled): we don't need the
	engine stuff, so don't retrieve it in the first place

2007-06-10  Jens Granseuer  <jensgr@gmx.net>

	* appearance-main.c: (init_appearance_data), (main):
	* appearance.h: fix passing and parsing of command line args

	* appearance-style.c: (update_color_buttons_from_settings),
	(check_color_schemes_enabled): fix leaks

	* appearance.glade: revert response_id sillyness from last commit

2007-06-09  Denis Washington  <denisw@svn.gnome.org>

	* appearance.glade:
	* appearance-style.c:
	Add all missing color schemes options from gnome-theme-manager, including
	a Reset To Defaults button.

2007-06-07  Jens Granseuer  <jensgr@gmx.net>

	* appearance-themes.c: (is_locked_down),
	(theme_changed_on_disk_cb), (theme_selection_changed_cb),
	(themes_init): add initial lockdown bits from theme-manager,
	delete button sensitivity updates, and preliminary support
	for reacting to metatheme changes

2007-06-06  Jens Granseuer  <jensgr@gmx.net>

	* appearance-themes.c: (theme_thumbnail_generate),
	(theme_queue_for_thumbnail), (theme_thumbnail_done_cb): update
	for changes in thumbnailer API

2007-06-06  Jens Granseuer  <jensgr@gmx.net>

	* appearance-style.c: (style_response_cb), (style_init): don't
	destroy the window on "delete-event"

	* appearance-themes.c: (theme_load_from_gconf),
	(theme_thumbnail_generate), (theme_queue_for_thumbnail),
	(theme_get_selected), (theme_set_custom_from_selected),
	(theme_remove_custom), (theme_thumbnail_done_cb),
	(theme_selection_changed_cb), (theme_custom_cb),
	(theme_details_changed_cb), (themes_init): hook up more of the
	customization functionality; don't unref generated thumbnails
	because they are still held in a cache by the thumbnailer

2007-06-05  Jens Granseuer  <jensgr@gmx.net>

	* Makefile.am:
	* gnome-theme-package.xml.in: move theme package mime type over
	from the theme-manager (closes bug #444336)
