@@ -1,5 +1,10 @@
 2007-06-10  Jens Granseuer  <jensgr@gmx.net>
 
+	* appearance-style.c: (check_color_schemes_enabled): disable the "reset
+	to defaults" button if the theme doesn't support custom colours
+
+2007-06-10  Jens Granseuer  <jensgr@gmx.net>
+
 	* appearance-style.c: (check_color_schemes_enabled): we don't need the
 	engine stuff, so don't retrieve it in the first place
 
